--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/klicktipp/node-red-contrib-klicktipp#readme",
   "author": {
     "name": "",
-    "email": ""
+    "email": "your-email@example.com"
   },
   "repository": {
     "type": "git",
@@ -22,9 +22,39 @@
   "scripts": {
     "format": "prettier 'utils/**/*.js' 'klicktipp.js' '.prettierrc.js' --write"
   },
+  "engines": {
+    "node": ">=14",
+    "node-red": ">=1.3.0 <5"
+  },
   "node-red": {
+    "version": ">=1.3.0 <5",
     "nodes": {
-      "klicktipp": "klicktipp.js"
+      "klicktipp-config": "nodes/klicktipp-config.js",
+      "klicktipp-login": "nodes/klicktipp-login.js",
+      "klicktipp-logout": "nodes/klicktipp-logout.js",
+      "klicktipp-subscription-process-index": "nodes/klicktipp-subscription-process-index.js",
+      "klicktipp-subscription-process-get": "nodes/klicktipp-subscription-process-get.js",
+      "klicktipp-subscription-process-get-redirect": "nodes/klicktipp-subscription-process-get-redirect.js",
+      "klicktipp-tag-index": "nodes/klicktipp-tag-index.js",
+      "klicktipp-tag-get": "nodes/klicktipp-tag-get.js",
+      "klicktipp-tag-create": "nodes/klicktipp-tag-create.js",
+      "klicktipp-tag-update": "nodes/klicktipp-tag-update.js",
+      "klicktipp-tag-delete": "nodes/klicktipp-tag-delete.js",
+      "klicktipp-field-index": "nodes/klicktipp-field-index.js",
+      "klicktipp-subscribe": "nodes/klicktipp-subscribe.js",
+      "klicktipp-unsubscribe": "nodes/klicktipp-unsubscribe.js",
+      "klicktipp-tag-email": "nodes/klicktipp-tag-email.js",
+      "klicktipp-untag-email": "nodes/klicktipp-untag-email.js",
+      "klicktipp-resend-autoresponder": "nodes/klicktipp-resend-autoresponder.js",
+      "klicktipp-subscriber-index": "nodes/klicktipp-subscriber-index.js",
+      "klicktipp-subscriber-get": "nodes/klicktipp-subscriber-get.js",
+      "klicktipp-subscriber-search": "nodes/klicktipp-subscriber-search.js",
+      "klicktipp-subscriber-tagged": "nodes/klicktipp-subscriber-tagged.js",
+      "klicktipp-subscriber-update": "nodes/klicktipp-subscriber-update.js",
+      "klicktipp-subscriber-delete": "nodes/klicktipp-subscriber-delete.js",
+      "klicktipp-signin": "nodes/klicktipp-signin.js",
+      "klicktipp-signout": "nodes/klicktipp-signout.js",
+      "klicktipp-signoff": "nodes/klicktipp-signoff.js"
     }
   },
   "dependencies": {
