Moved icons into node folder in order to fix the issue with the lack of the node icon. Added .svg icon. Change node color. Moved utils and constants folder into nodes

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/klicktipp/node-red-contrib-klicktipp"
   },
   "scripts": {
-    "format": "prettier 'utils/**/*.js' 'nodes/**/*.js' '.prettierrc.js' --write"
+    "format": "prettier 'utils/**/*.js' 'nodes/**/*.js' 'nodes/**/*.html' '.prettierrc.js' --write"
   },
   "engines": {
     "node": ">=14",
