--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "homepage": "https://github.com/klicktipp/node-red-contrib-klicktipp#readme",
   "author": {
-    "name": "",
-    "email": "your-email@example.com"
+    "name": "KlickTipp Inc",
+    "email": "awesome-klicktipp-email@klicktipp.com"
   },
   "repository": {
     "type": "git",
