feat: 1.0.4. Current progress

--- a/package.json
+++ b/package.json
@@ -30,29 +30,35 @@
     "version": ">=1.3.0 <5",
     "nodes": {
       "klicktipp-config": "nodes/klicktipp-config.js",
-      "klicktipp-subscriber-index": "nodes/klicktipp-subscriber-index.js",
-      "klicktipp-subscriber-search": "nodes/klicktipp-subscriber-search.js",
-      "klicktipp-subscriber-tagged": "nodes/klicktipp-subscriber-tagged.js",
-      "klicktipp-subscriber-get": "nodes/klicktipp-subscriber-get.js",
-      "klicktipp-subscriber-subscribe": "nodes/klicktipp-subscriber-subscribe.js",
-      "klicktipp-subscriber-update": "nodes/klicktipp-subscriber-update.js",
-      "klicktipp-subscriber-tag": "nodes/klicktipp-subscriber-tag.js",
-      "klicktipp-subscriber-untag": "nodes/klicktipp-subscriber-untag.js",
-      "klicktipp-subscriber-unsubscribe": "nodes/klicktipp-subscriber-unsubscribe.js",
-      "klicktipp-subscriber-delete": "nodes/klicktipp-subscriber-delete.js",
-      "klicktipp-subscriber-signout": "nodes/klicktipp-subscriber-signout.js",
-      "klicktipp-subscriber-signoff": "nodes/klicktipp-subscriber-signoff.js",
-      "klicktipp-subscriber-signin": "nodes/klicktipp-subscriber-signin.js",
-      "klicktipp-subscription-process-index": "nodes/klicktipp-subscription-process-index.js",
-      "klicktipp-subscription-process-get": "nodes/klicktipp-subscription-process-get.js",
-      "klicktipp-subscription-process-get-redirect": "nodes/klicktipp-subscription-process-get-redirect.js",
-      "klicktipp-tag-index": "nodes/klicktipp-tag-index.js",
-      "klicktipp-tag-get": "nodes/klicktipp-tag-get.js",
-      "klicktipp-tag-create": "nodes/klicktipp-tag-create.js",
-      "klicktipp-tag-update": "nodes/klicktipp-tag-update.js",
-      "klicktipp-tag-delete": "nodes/klicktipp-tag-delete.js",
-      "klicktipp-field-index": "nodes/klicktipp-field-index.js",
-      "klicktipp-resend-autoresponder": "nodes/klicktipp-resend-autoresponder.js"
+      "klicktipp-subscriber-index": "nodes/subscribers/klicktipp-subscriber-index.js",
+      "klicktipp-subscriber-search": "nodes/subscribers/klicktipp-subscriber-search.js",
+      "klicktipp-subscriber-tagged": "nodes/subscribers/klicktipp-subscriber-tagged.js",
+      "klicktipp-subscriber-get": "nodes/subscribers/klicktipp-subscriber-get.js",
+      "klicktipp-subscriber-subscribe": "nodes/subscribers/klicktipp-subscriber-subscribe.js",
+      "klicktipp-subscriber-update": "nodes/subscribers/klicktipp-subscriber-update.js",
+      "klicktipp-subscriber-tag": "nodes/subscribers/klicktipp-subscriber-tag.js",
+      "klicktipp-subscriber-untag": "nodes/subscribers/klicktipp-subscriber-untag.js",
+      "klicktipp-subscriber-unsubscribe": "nodes/subscribers/klicktipp-subscriber-unsubscribe.js",
+      "klicktipp-subscriber-delete": "nodes/subscribers/klicktipp-subscriber-delete.js",
+      "klicktipp-subscriber-signout": "nodes/subscribers/klicktipp-subscriber-signout.js",
+      "klicktipp-subscriber-signoff": "nodes/subscribers/klicktipp-subscriber-signoff.js",
+      "klicktipp-subscriber-signin": "nodes/subscribers/klicktipp-subscriber-signin.js",
+      "klicktipp-subscription-process-index": "nodes/subscription-processes/klicktipp-subscription-process-index.js",
+      "klicktipp-subscription-process-get": "nodes/subscription-processes/klicktipp-subscription-process-get.js",
+      "klicktipp-subscription-process-create": "nodes/subscription-processes/klicktipp-subscription-process-create.js",
+      "klicktipp-subscription-process-delete": "nodes/subscription-processes/klicktipp-subscription-process-delete.js",
+      "klicktipp-subscription-process-get-redirect": "nodes/subscription-processes/klicktipp-subscription-process-get-redirect.js",
+      "klicktipp-resend-autoresponder": "nodes/subscribers/klicktipp-resend-autoresponder.js",
+      "klicktipp-tag-index": "nodes/tags/klicktipp-tag-index.js",
+      "klicktipp-tag-get": "nodes/tags/klicktipp-tag-get.js",
+      "klicktipp-tag-create": "nodes/tags/klicktipp-tag-create.js",
+      "klicktipp-tag-update": "nodes/tags/klicktipp-tag-update.js",
+      "klicktipp-tag-delete": "nodes/tags/klicktipp-tag-delete.js",
+      "klicktipp-field-index": "nodes/fields/klicktipp-field-index.js",
+      "klicktipp-field-create": "nodes/fields/klicktipp-field-create.js",
+      "klicktipp-field-get": "nodes/fields/klicktipp-field-get.js",
+      "klicktipp-field-update": "nodes/fields/klicktipp-field-update.js",
+      "klicktipp-field-delete": "nodes/fields/klicktipp-field-delete.js"
     }
   },
   "dependencies": {
