--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "klicktipp-subscription-process-index": "nodes/subscription-processes/klicktipp-subscription-process-index.js",
       "klicktipp-subscription-process-get-redirect": "nodes/subscription-processes/klicktipp-subscription-process-get-redirect.js",
       "klicktipp-field-get": "nodes/fields/klicktipp-field-get.js",
-      "klicktipp-field-index": "nodes/fields/klicktipp-field-index.js"
+      "klicktipp-field-index": "nodes/fields/klicktipp-field-index.js",
+      "klicktipp-webhook-trigger": "nodes/trigers/klicktipp-webhook-trigger.js"
     }
   },
   "dependencies": {
