docs: change email in package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "homepage": "https://github.com/klicktipp/node-red-contrib-klicktipp#readme",
   "author": {
     "name": "KlickTipp Team",
-    "email": "github@team.klicktipp.com",
+    "email": "integrations@klick-tipp.team",
     "url": "https://www.klicktipp.com/"
   },
   "repository": {
