--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "https://github.com/klicktipp/node-red-contrib-klicktipp"
   },
   "scripts": {
-    "format": "prettier 'utils/**/*.js' 'nodes/**/*.js' 'nodes/**/*.html' '.prettierrc.js' --write"
+    "format": "prettier --write \"{resources,nodes}/**/*.{js,html}\" .prettierrc.js"
   },
   "engines": {
     "node": ">=14",
